# wallmux

./: .directory  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
config/: default.toml
docs/: PACKAGING.md  PROGRESS.md  PROJECT_PLAN.md  VIDEO_TROUBLESHOOTING.md
examples/: README.md  cache-video-optimization.md
examples/autoswitch/: name-down-monitor.toml  name-up-focused.toml  random-all.toml
examples/backends/: awww-swww-fallback.toml  hyprpaper-images.toml  mpvpaper-balanced.toml
examples/hooks/: after-set-colors.sh
examples/profiles/: color-topic-profiles.toml  parent-child-hooks.toml
examples/quickshell-wallmux-fade/: README.md  shell.qml  wallmux-fade.sh  wallmux.toml
packaging/applications/: wallmux-gui.desktop
packaging/arch/: PKGBUILD
packaging/systemd/: wallmux.service
src/wallmux/: __init__.py  cli.py  daemon.py  gui.py
src/wallmux/backends/: __init__.py  awww.py  base.py  gslapper.py  hyprpaper.py  mpvpaper.py  routing.py  swww.py
src/wallmux/core/: __init__.py  autoswitch.py  cache.py  colors.py  config.py  daemon.py  doctor.py  hooks.py  inhibition.py  ipc.py  library.py  mime.py  monitors.py  notifications.py  process.py  profiles.py  resources.py  state.py  thumbnails.py  transition_effects.py  transitions.py  video.py  video_posters.py  video_queue.py  wallpaper.py
src/wallmux/data/: __init__.py  default.toml
tests/: test_autoswitch.py  test_backend_routing.py  test_cache.py  test_colors.py  test_config.py  test_daemon.py  test_doctor.py  test_gui_helpers.py  test_hooks.py  test_inhibition.py  test_library.py  test_mime.py  test_notifications.py  test_process.py  test_profiles.py  test_resources.py  test_transition_effects.py  test_transitions.py  test_video.py  test_video_posters.py  test_video_queue.py  test_wallpaper.py
